--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login V18</title>
+	<title>Login </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -116,30 +116,3 @@
 </body>
 </html>
 
-<script>var name = document.getElementById('name');
-	var pw = document.getElementById('pw');
-	
-	// storing input from register-form
-	function store() {
-		localStorage.setItem('name', name.value);
-		localStorage.setItem('pw', pw.value);
-	}
-	
-	// check if stored data from register-form is equal to entered data in the   login-form
-	function check() {
-	
-		// stored data from the register-form
-		var storedName = localStorage.getItem('name');
-		var storedPw = localStorage.getItem('pw');
-	
-		// entered data from the login-form
-		var userName = document.getElementById('userName');
-		var userPw = document.getElementById('userPw');
-	
-		// check if stored data from register-form is equal to data from login form
-		if(userName.value !== storedName || userPw.value !== storedPw) {
-			alert('ERROR');
-		}else {
-			alert('You are loged in.');
-		}
-	}</script>
